--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@nuxt/icon": "1.12.0",
+    "@tailwindcss/vite": "^4.1.5",
     "nuxt": "^3.17.1",
+    "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.2.17",
     "@nuxt/eslint": "^1.3.0",
+    "daisyui": "^5.0.35",
     "eslint": "^9.26.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
