--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "1.12.0",
+    "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/vite": "^4.1.5",
     "nuxt": "^3.17.1",
     "tailwindcss": "^4.1.5",
