--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"pnpm dev:db\" \"nuxt dev\"",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,9 +14,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.4",
     "@nuxt/icon": "1.12.0",
     "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/vite": "^4.1.5",
+    "concurrently": "^9.1.2",
+    "drizzle-orm": "^0.43.1",
     "nuxt": "^3.17.1",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
@@ -26,6 +30,7 @@
     "@iconify-json/tabler": "^1.2.17",
     "@nuxt/eslint": "^1.3.0",
     "daisyui": "^5.0.35",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.26.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
