--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/color-mode": "3.5.2",
     "@pinia/nuxt": "0.11.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@vue/compiler-sfc": "^3.5.17",
     "better-auth": "^1.2.7",
     "concurrently": "^9.1.2",
     "drizzle-orm": "^0.43.1",
